--- a/src/css/wavemakerInterface.css
+++ b/src/css/wavemakerInterface.css
@@ -8,7 +8,7 @@
   background-color: var(--pageEditor-bgcolor);
   color: var(--pageEditor-color);
   margin-bottom: 10px;
-  margin-top: 80px;
+  margin-top: 0px;
   padding: 5% 10% 5% 10%;
   padding-bottom: 100px;
   min-height: 900px;
@@ -17,17 +17,13 @@
 .PageEditorScroll {
   position: absolute;
   max-width: var(--pageEditor-page);
-  top: 0;
+  top: 80px;
   left: 0;
   right: 0;
   bottom: 0;
   margin: auto;
   overflow-y: scroll;
 }
-
-/* .writer .ProseMirror p:first-of-type {
-  text-indent: 0px;
-} */
 
 .writer .ProseMirror p {
   margin-bottom: var(--pageEditor-pspacing);
@@ -65,17 +61,6 @@
   padding-bottom: 100px;
   min-height: 900px;
   outline: none;
-}
-
-.PageEditorScroll {
-  position: absolute;
-  max-width: var(--pageEditor-page);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  overflow-y: scroll;
 }
 
 .distractionfree .ProseMirror p:first-of-type {
